--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Название страницы</title>
+</head>
+<body>
+<script src="/DeytelengScript/index.js"></script>
+</body>
+</html>
