--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 <link rel="stylesheet" href="/DeytelengScript/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap">
-<title>Название страницы</title>
+<title>DeytelengScript</title>
 </head>
 <body>
+<div class="top-panel">
+  <a href="https://shaman2016scratch.github.io/DeytelengScript/">DeytelengScript</a>
+  <div id="theme"><img src="tema-1"></div>
+</div>
 <script src="/DeytelengScript/index.js"></script>
 </body>
 </html>
