--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="/DeytelengScript/main.css">
+<link id="css" rel="stylesheet" href="/DeytelengScript/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap">
-<title>DeytelengScript</title>
+<title id="title">DeytelengScript</title>
 </head>
 <body>
 <div class="top-panel">
   <a href="https://shaman2016scratch.github.io/DeytelengScript/">DeytelengScript</a>
-  <div id="theme"><img src="tema-1"></div>
+  <div id="theme" onclick="newTheme()"><img src="tema-1.svg"></div>
 </div>
 <script src="/DeytelengScript/index.js"></script>
 </body>
