--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
   <a href="https://shaman2016scratch.github.io/DeytelengScript/">DeytelengScript</a>
   <div id="theme" onclick="newTheme()"><img src="tema-1.svg"></div>
 </div>
+<table>
+  <tbody>
+    <tr>
+      <td>
+        <h2>Code</h2>
+        <textarea id="input" placeholder="Your code" rows="10" cols="50"></textarea>
+      </td>
+      <td>
+        <h2>Output</h2>
+        <div id="output">
+          <p>It's empty!</p>
+        </div>
+      </td>
+      <td>
+        <h2>Console</h2>
+        <div id="console">
+          <p>Site started</p>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+</table>
 <script src="/DeytelengScript/index.js"></script>
 </body>
 </html>
