--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="console">
           <p>Site started</p>
         </div>
+        <p><input type="text" id="sendConsole" placeholder="Send text to the console"><button onclick="SendToConsole()">Send</button></p>
       </td>
     </tr>
   </tbody>
