--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-panel">
   <a href="https://shaman2016scratch.github.io/DeytelengScript/">DeytelengScript</a>
-  <div id="theme" onclick="newTheme()"><img src="tema-1.svg"></div>
+  <div onclick="newTheme()"><img id="theme" src="tema-1.svg"></div>
 </div>
 <table>
   <tbody>
