--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <div class="top-panel">
   <a href="https://shaman2016scratch.github.io/DeytelengScript/">DeytelengScript</a>
   <div onclick="newTheme()"><img id="theme" src="tema-1.svg"></div>
+  <input type="text" id="ProjectName" placeholder="Project name">
 </div>
 <p><button onclick="Run()">Run code</button></p>
 <p>Version: 1.0</p>
 <p>Lang: English</p>
+<p>CodeRunner version: 1.0</p>
+<p>Output version: 1.0</p>
+<p>console version: 1.0</p>
 <table>
   <tbody>
     <tr>
