--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 </div>
 <p><button onclick="Run()">Run code</button></p>
 <p>Version: 1.0</p>
-<p>Lang: English</p>
+<p id="lang">Lang: English</p>
 <p>CodeRunner version: 1.0</p>
 <p>Output version: 1.0</p>
 <p>console version: 1.0</p>
+<p><button onclick="ImportCode()">Import</button><button onclick="ExportCode()">Extport</button></p>
 <table>
   <tbody>
     <tr>
