--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <input type="text" id="ProjectName" placeholder="Project name">
 </div>
 <p><button onclick="Run()">Run code</button></p>
-<p>Version: 1.0</p>
+<p>Version: 1.0. Not my</p>
 <p id="lang">Lang: English</p>
 <p>CodeRunner version: 1.0</p>
 <p>Output version: 1.0</p>
